<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/house_detail_picture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/house_detail_picture_height"
        android:contentDescription="@string/picture_description_house"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Auxiliary container for keeping buttons in the system window.
        And for the correct pressing animation. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/house_detail_icon_back"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/icon_description_back"
            android:focusable="true"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/house_detail_icon_bookmark"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/icon_description_bookmark"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_outline_bookmark_border_24"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Auxiliary layout for constraining the custom rounded view. -->
    <FrameLayout
        android:id="@+id/utility"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/house_detail_rounded_container_corner_radius"
        app:layout_constraintBottom_toBottomOf="@id/house_detail_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/rounded_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/utility" />

    <TextView
        android:id="@+id/house_detail_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/container_margin"
        android:layout_marginTop="@dimen/margin_large"
        android:textAppearance="@style/TextAppearance.DTTRealEstate.TitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rounded_container" />

    <ImageView
        android:id="@+id/house_detail_icon_bedrooms"
        android:layout_width="@dimen/house_card_icon_size"
        android:layout_height="@dimen/house_card_icon_size"
        android:layout_marginEnd="@dimen/detail_text_margin"
        android:contentDescription="@string/icon_description_bedrooms"
        app:layout_constraintBottom_toBottomOf="@id/house_detail_price"
        app:layout_constraintEnd_toStartOf="@id/house_detail_bedrooms"
        app:layout_constraintTop_toTopOf="@id/house_detail_price"
        app:srcCompat="@drawable/ic_bed"
        app:tint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/house_detail_bedrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/icon_margin"
        android:textAppearance="@style/TextAppearance.DTTRealEstate.Detail"
        app:layout_constraintBottom_toBottomOf="@id/house_detail_icon_bedrooms"
        app:layout_constraintEnd_toStartOf="@id/house_detail_icon_bathrooms"
        app:layout_constraintTop_toTopOf="@id/house_detail_icon_bedrooms" />

    <ImageView
        android:id="@+id/house_detail_icon_bathrooms"
        android:layout_width="@dimen/house_card_icon_size"
        android:layout_height="@dimen/house_card_icon_size"
        android:layout_marginEnd="@dimen/detail_text_margin"
        android:contentDescription="@string/icon_description_bathrooms"
        app:layout_constraintBottom_toBottomOf="@id/house_detail_price"
        app:layout_constraintEnd_toStartOf="@id/house_detail_bathrooms"
        app:layout_constraintTop_toTopOf="@id/house_detail_price"
        app:srcCompat="@drawable/ic_bath"
        app:tint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/house_detail_bathrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/icon_margin"
        android:textAppearance="@style/TextAppearance.DTTRealEstate.Detail"
        app:layout_constraintBaseline_toBaselineOf="@id/house_detail_bedrooms"
        app:layout_constraintEnd_toStartOf="@id/house_detail_icon_size" />

    <ImageView
        android:id="@+id/house_detail_icon_size"
        android:layout_width="@dimen/house_card_icon_size"
        android:layout_height="@dimen/house_card_icon_size"
        android:layout_marginEnd="@dimen/detail_text_margin"
        android:contentDescription="@string/icon_description_size"
        app:layout_constraintBottom_toBottomOf="@id/house_detail_price"
        app:layout_constraintEnd_toStartOf="@id/house_detail_size"
        app:layout_constraintTop_toTopOf="@id/house_detail_price"
        app:srcCompat="@drawable/ic_layers"
        app:tint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/house_detail_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/icon_margin"
        android:textAppearance="@style/TextAppearance.DTTRealEstate.Detail"
        app:layout_constraintBaseline_toBaselineOf="@id/house_detail_bathrooms"
        app:layout_constraintEnd_toStartOf="@id/house_detail_icon_distance" />

    <ImageView
        android:id="@+id/house_detail_icon_distance"
        android:layout_width="@dimen/house_card_icon_size"
        android:layout_height="@dimen/house_card_icon_size"
        android:layout_marginEnd="@dimen/detail_text_margin"
        android:contentDescription="@string/icon_description_distance"
        app:layout_constraintBottom_toBottomOf="@id/house_detail_price"
        app:layout_constraintEnd_toStartOf="@id/house_detail_distance"
        app:layout_constraintTop_toTopOf="@id/house_detail_price"
        app:srcCompat="@drawable/ic_location"
        app:tint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/house_detail_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/container_margin"
        android:textAppearance="@style/TextAppearance.DTTRealEstate.Detail"
        app:layout_constraintBaseline_toBaselineOf="@id/house_detail_size"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/container_margin"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/container_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/house_detail_price">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/house_detail_title_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/house_detail_title_description"
                android:textAppearance="@style/TextAppearance.DTTRealEstate.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/house_detail_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="@string/lorem_ipsum"
                android:textAppearance="@style/TextAppearance.DTTRealEstate.BodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/house_detail_title_description" />

            <TextView
                android:id="@+id/house_detail_title_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="@string/house_detail_title_location"
                android:textAppearance="@style/TextAppearance.DTTRealEstate.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/house_detail_text_description" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/map_height"
                android:layout_marginTop="@dimen/margin_regular"
                android:layout_marginBottom="@dimen/container_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/house_detail_title_location"
                tools:context=".MapsFragment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>